--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>商品一覧</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container {
+            width: 80%;
+            margin-top: 20px;
+        }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            text-align: center;
+            vertical-align: middle;
+            padding: 8px 12px;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+    </style>
 </head>
 <body>
-
+<a href="/home">ホームへ</a>
+<h1>商品一覧</h1>
+<div class="container">
+    <table>
+        <tr>
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>価格</th>
+            <th>商品説明</th>
+            <th>商品画像</th>
+        </tr>
+        <tr th:each="product : ${productList}">
+            <td th:text="${product.productId}"></td>
+            <td>
+                <a th:href="@{/product/detail(id=${product.productId})}" th:text="${product.productName}"></a>
+            </td>
+            <td th:text="${product.productPrice}"></td>
+            <td th:text="${product.productDescription}"></td>
+            <td>
+                <img th:src="@{/img/yukata.jpg}" alt="商品画像" style="max-width: 300px; max-height: 300px;">
+            </td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
